fix: item icon align

--- a/packages/theme-chalk/src/upload.scss
+++ b/packages/theme-chalk/src/upload.scss
@@ -243,7 +243,6 @@
     & .#{$namespace}-icon {
       margin-right: 7px;
       color: var(--el-text-color-secondary);
-      line-height: inherit;
 
       svg {
         vertical-align: text-bottom;
